ref : refacto .gitignore

--- a/Codewars/java/.gitignore
+++ b/Codewars/java/.gitignore
@@ -1,74 +1,17 @@
-# Compiled class files
-*.class
+target
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+# https://github.com/takari/maven-wrapper#usage-without-binary-jar
+.mvn/wrapper/maven-wrapper.jar
 
-# Log files
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# Maven target directory
-/target/
-
-# Eclipse IDE files
+# Eclipse m2e generated files
+# Eclipse Core
 .project
+# JDT-specific (Eclipse Java Development Tools)
 .classpath
-.settings/
-.metadata/
-
-# IntelliJ IDEA
-.idea/
-*.iml
-*.iws
-
-# NetBeans
-nbproject/private/
-build/
-nbbuild/
-dist/
-.nbm/
-
-# VS Code
-.vscode/
-
-# macOS files
-.DS_Store
-
-# Windows Thumbs.db files
-Thumbs.db
-
-# Temporary files
-*.tmp
-*.swp
-*.swo
-~*
-
-# JRebel
-rebel.xml
-
-# Generated files
-*.generated
-
-# Coverage and test result files
-*.coverage
-*.testresults
-*.lcov
-
-# OS files
-ehthumbs.db
-Icon?
-
-# Exclude any custom configuration files
-*.env
